@@ -1,4 +1,8 @@
-from fastmcp.client.transports import SSETransport, StdioTransport, WSTransport
+from fastmcp.client.transports import (
+    StdioTransport,
+    StreamableHttpTransport,
+    WSTransport,
+)
 
 from oterm.tools.mcp.client import MCPClient
 
@@ -12,9 +16,9 @@ def test_stdio_transport(mcp_server_config):
     assert isinstance(client.transport, StdioTransport)
 
 
-def test_sse_transport(mcp_server_config):
-    client = MCPClient("test_sse", mcp_server_config["sse"])
-    assert isinstance(client.transport, SSETransport)
+def test_streamable_http(mcp_server_config):
+    client = MCPClient("test_streamable_http", mcp_server_config["streamable_http"])
+    assert isinstance(client.transport, StreamableHttpTransport)
 
 
 def test_ws_transport(mcp_server_config):
